# cyclic-rc

./: .editorconfig  .gitignore  .npmignore  CMakeLists.txt  Makefile  README.md  binding.gyp  index.d.ts  index.js  package.json  tsconfig.json  typings.d.ts
.github/workflows/: codeql-analysis.yml
benchmark/: index.js  index.ts
scripts/: generate-table.js
src/: node_crc.cc  node_crc.h
test/: test.js
